unpackaged/main/default/objects/Account/fields/Annual_Insurance_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Annual_Insurance_Deductible__c</fullName>
    <label>Annual Insurance Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>