unpackaged/main/default/objects/Account/fields/Applicant_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Birth_Date__c</fullName>
    <description>Using Trigger, Populating Patient Date of Birth to create Matching/Duplicate Rule.</description>
    <label>Applicant Birth Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>