unpackaged/main/default/objects/Account/fields/Applicant_Id__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Id__c</fullName>
    <description>Auto-generated Unique Account Number</description>
    <inlineHelpText>Auto-generated Unique Account Number</inlineHelpText>
    <label>Applicant Id</label>
    <type>AutoNumber</type>
</CustomField>