unpackaged/main/default/objects/Account/fields/Breast_Cancer_Status__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Status__c</fullName>
    <label>Breast Cancer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Indications</fullName>
            </value>
            <value>
                <fullName>Diagnosed</fullName>
            </value>
            <value>
                <fullName>Metastatic</fullName>
            </value>
            <value>
                <fullName>Remission</fullName>
            </value>
            <value>
                <fullName>Survivor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>