unpackaged/main/default/objects/Account/fields/Care_Program_Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Care_Program_Enrollee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>holds the lookup to the Care Program Enrollee record that the Patient is currently enrolled in.  Filled in by a Flow based on create or edit of a Care Program Enrollee record</description>
    <label>Care Program Enrollee</label>
    <referenceTo>CareProgramEnrollee</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>