unpackaged/main/default/objects/Account/fields/Date_of_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Assessment__c</fullName>
    <description>Store most recent risk assessment date.</description>
    <label>Date of Assessment</label>
    <type>Date</type>
</CustomField>