unpackaged/main/default/objects/Account/fields/Enrollee_Intake_Complete__c.field-meta.xml
<CustomField>
    <fullName>Enrollee_Intake_Complete__c</fullName>
    <formula>Care_Program_Enrollee__r.Intake_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollee Intake Complete?</label>
    <type>Checkbox</type>
</CustomField>