unpackaged/main/default/objects/Account/fields/Federal_Poverty_Level__c.field-meta.xml
<CustomField>
    <fullName>Federal_Poverty_Level__c</fullName>
    <formula>Annual_Household_Income__pc / Federal_Bracket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Federal Poverty Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>