unpackaged/main/default/objects/Account/fields/In_Patient_Navigation__c.field-meta.xml
<CustomField>
    <fullName>In_Patient_Navigation__c</fullName>
    <formula>!(ISBLANK( Care_Program_Enrollee__c ))</formula>
    <label>In Patient Navigation?</label>
    <type>Checkbox</type>
</CustomField>