unpackaged/main/default/objects/Account/fields/IntakeComplete__c.field-meta.xml
<CustomField>
    <fullName>IntakeComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IntakeComplete</label>
    <type>Checkbox</type>
</CustomField>