unpackaged/main/default/objects/Account/fields/Monthly_out_of_pocket_health_Care_Costs__c.field-meta.xml
<CustomField>
    <fullName>Monthly_out_of_pocket_health_Care_Costs__c</fullName>
    <label>Monthly out of pocket health Care Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>