unpackaged/main/default/objects/Account/fields/Notes_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Notes_Risk_Assessment__c</fullName>
    <description>Notes field to store risk assessment.</description>
    <label>Notes(Risk Assessment)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>