unpackaged/main/default/objects/Account/fields/Patient_Alert__c.field-meta.xml
<CustomField>
    <fullName>Patient_Alert__c</fullName>
    <label>Patient Alert</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>