unpackaged/main/default/objects/Account/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Using Trigger, Update Payment Date from Payment obj.</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>