unpackaged/main/default/objects/Account/fields/PeopleSoft_Id__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Id__c</fullName>
    <description>Map this field with People Soft(Vendor) Id for Import/Export data.</description>
    <externalId>true</externalId>
    <inlineHelpText>PeopleSoft Vendor Id</inlineHelpText>
    <label>PeopleSoft Id (Vendor)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>