unpackaged/main/default/objects/Account/fields/Preferred_method_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_method_of_contact__c</fullName>
    <label>Preferred method of contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>Email Address</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>