unpackaged/main/default/objects/Account/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <description>Risk level to store recent risk assessment severity level</description>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Above Average Risk</fullName>
            </value>
            <value>
                <fullName>Average Risk</fullName>
            </value>
            <value>
                <fullName>Below Average Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>