unpackaged/main/default/objects/Account/fields/Show_Patient_Alert__c.field-meta.xml
<CustomField>
    <fullName>Show_Patient_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, used by Lightning Page to display the Patient Alert field at the top of the Patient Details.</description>
    <label>Show Patient Alert</label>
    <type>Checkbox</type>
</CustomField>