unpackaged/main/default/objects/Account/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <formula>Text(PersonMailingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State(Code)</label>
    <type>Text</type>
</CustomField>