unpackaged/main/default/objects/Account/fields/Type_of_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Assessment__c</fullName>
    <description>Risk assessment types</description>
    <label>Type of Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mammograms</fullName>
            </value>
            <value>
                <fullName>Triple assessment</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>Gail model</fullName>
            </value>
            <value>
                <fullName>IBIS model</fullName>
            </value>
            <value>
                <fullName>BOADICEA model</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>