unpackaged/main/default/objects/Account/fields/Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Status__c</fullName>
    <label>Veteran Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never served in the military</fullName>
            </value>
            <value>
                <fullName>Only on active duty for training in the Reserves or National Guard</fullName>
            </value>
            <value>
                <fullName>Now on active duty</fullName>
            </value>
            <value>
                <fullName>On active duty in the past, but not now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>