unpackaged/main/default/objects/Account/recordTypes/Patient_Information.recordType-meta.xml
<RecordType>
    <fullName>Patient_Information</fullName>
    <active>false</active>
    <label>Patient Information</label>
</RecordType>