unpackaged/main/default/objects/Account/validationRules/Either_Email_Or_Phone_is_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Email_Or_Phone_is_Not_Blank</fullName>
    <active>true</active>
    <description>Must have one of the presented phone numbers filled in, AND email address</description>
    <errorConditionFormula>AND(
            AND(
                ISBLANK( Phone ),
                ISBLANK( PersonAssistantPhone ),
                ISBLANK( PersonHomePhone ),
                ISBLANK( PersonMobilePhone ),
                ISBLANK( PersonOtherPhone )
            ),
            ISBLANK( PersonEmail ),
            IsPersonAccount,
            !$Setup.Bypass__c.Validation__c,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot;,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;account&quot;
        )</errorConditionFormula>
    <errorMessage>A Phone Number or Email Address is required to create a new patient</errorMessage>
</ValidationRule>