unpackaged/main/default/objects/Account/validationRules/Update_Notes_for_Other_Assessment_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Notes_for_Other_Assessment_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            IsPersonAccount,
            ISPICKVAL( Type_of_Assessment__c ,&apos;Other&apos;),
            ISBLANK( Notes_Risk_Assessment__c ),
            !$Setup.Bypass__c.Validation__c,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot;,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;account&quot;
        )</errorConditionFormula>
    <errorMessage>You&apos;ve selected &quot;Other&quot; for Assessment Type. Please provide details in the Notes(Risk Assessment) field</errorMessage>
</ValidationRule>